--- a/404.html
+++ b/404.html
@@ -149,8 +149,8 @@
     <div class="container pt-90 pb-30">
         <div class="row">
             <div class="col-12 col-sm-10 mx-auto">
-                <!-- <h2 class="text-center">建置中</h2> -->
-                <img class="fit-image" src="./assets/images/about/build.png" alt="建置中">
+                <h2 class="text-center">維修中</h2>
+                <img class="w-50 main-center" src="./assets/images/icon/icon_fix.svg" alt="維修中">
             </div>
         </div>
     </div>
